tests/rosetta/out/Smalltalk/cistercian-numerals.error
parse: error[P011]: /workspace/mochi/tests/rosetta/x/Mochi/cistercian-numerals.mochi:26:19: unexpected token "{" (expected "=>" Expr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/cistercian-numerals.mochi:26:19

 26 |   draw[1] = fun() { horiz(6,10,0) }
    |                   ^

help:
  `=>` cannot replace a full `{}` block in function bodies.